--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ section{
     height: 100vh;
     display: flex;
     align-items: center;
-    background-image: url(assets/Untitled\ design.png);
+    background-image: url(1.webp);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
